fix: css layout bugs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,7 +35,7 @@ a:hover {
 .scene{
   width:100vw;
   height:100vh;
-  position: absolute;
+  position: fixed;
 }
 
 .canvas{
